test_results.txt
Verbosity level can be increased via `-v, -vv, or -vvv` option
Collected 6 tests

Processing test_lorawan in native environment
--------------------------------------------------------------------------------
Building...
Testing...
test/test_lorawan/test_lorawan.cpp:127: test_os_getArtEui_valid	[PASSED]
test/test_lorawan/test_lorawan.cpp:128: test_os_getArtEui_invalid_length	[PASSED]
test/test_lorawan/test_lorawan.cpp:129: test_os_getDevEui_valid	[PASSED]
test/test_lorawan/test_lorawan.cpp:130: test_os_getDevKey_valid	[PASSED]
test/test_lorawan/test_lorawan.cpp:131: test_LoraWANPrintLMICOpmode_executes	[PASSED]
test/test_lorawan/test_lorawan.cpp:132: test_os_getArtEui_invalid_hex	[PASSED]
---------------- native:test_lorawan [PASSED] Took 0.41 seconds ----------------

Processing test_lorawan_settings in native environment
--------------------------------------------------------------------------------
Building...
Testing...
test/test_lorawan_settings/test_lorawan_settings.cpp:124: test_string_roundtrip	[PASSED]
test/test_lorawan_settings/test_lorawan_settings.cpp:125: test_string_default	[PASSED]
test/test_lorawan_settings/test_lorawan_settings.cpp:126: test_bool_roundtrip	[PASSED]
test/test_lorawan_settings/test_lorawan_settings.cpp:127: test_bool_default	[PASSED]
test/test_lorawan_settings/test_lorawan_settings.cpp:129: test_sleep_time_default	[PASSED]
test/test_lorawan_settings/test_lorawan_settings.cpp:130: test_sleep_time_custom	[PASSED]
test/test_lorawan_settings/test_lorawan_settings.cpp:132: test_calibration_default	[PASSED]
test/test_lorawan_settings/test_lorawan_settings.cpp:133: test_calibration_values	[PASSED]
test/test_lorawan_settings/test_lorawan_settings.cpp:135: test_lmic_persistence	[PASSED]
----------- native:test_lorawan_settings [PASSED] Took 0.41 seconds -----------

Processing test_utils in native environment
--------------------------------------------------------------------------------
Building...
Testing...
test/test_utils/test_safe_strncpy.cpp:106: test_null_source	[PASSED]
test/test_utils/test_safe_strncpy.cpp:107: test_exact_fit	[PASSED]
test/test_utils/test_safe_strncpy.cpp:108: test_truncation	[PASSED]
test/test_utils/test_safe_strncpy.cpp:109: test_buffer_integrity	[PASSED]
test/test_utils/test_safe_strncpy.cpp:111: test_dest_size_one	[PASSED]
test/test_utils/test_safe_strncpy.cpp:112: test_empty_source	[PASSED]
test/test_utils/test_safe_strncpy.cpp:113: test_null_dest	[PASSED]
----------------- native:test_utils [PASSED] Took 0.40 seconds -----------------

Processing test_menu in native environment
--------------------------------------------------------------------------------
Building...
/usr/bin/ld: .pio/build/native/test/test_menu/test_menu.o: warning: relocation against `LMIC' in read-only section `.text'
/usr/bin/ld: .pio/build/native/test/test_menu/test_menu.o: in function `load_lmic()':
test_menu.cpp:(.text+0x1f16): undefined reference to `LMIC'
/usr/bin/ld: test_menu.cpp:(.text+0x1f22): undefined reference to `LMIC'
/usr/bin/ld: .pio/build/native/test/test_menu/test_menu.o: in function `lmic_save()':
test_menu.cpp:(.text+0x1f9b): undefined reference to `LMIC'
/usr/bin/ld: test_menu.cpp:(.text+0x1fc5): undefined reference to `LMIC'
/usr/bin/ld: warning: creating DT_TEXTREL in a PIE
collect2: error: ld returned 1 exit status
*** [.pio/build/native/program] Error 1
Building stage has failed, see errors above. Use `pio test -vvv` option to enable verbose output.
----------------- native:test_menu [ERRORED] Took 0.40 seconds -----------------

Processing test_memory_management in native environment
--------------------------------------------------------------------------------
Building...
Testing...
test/test_memory_management/test_memory_management.cpp:79: test_unique_ptr_creation	[PASSED]
test/test_memory_management/test_memory_management.cpp:80: test_unique_ptr_array	[PASSED]
test/test_memory_management/test_memory_management.cpp:81: test_const_array_access	[PASSED]
test/test_memory_management/test_memory_management.cpp:82: test_string_operations	[PASSED]
----------- native:test_memory_management [PASSED] Took 0.40 seconds -----------

Processing test_main in native environment
--------------------------------------------------------------------------------
Building...
In file included from test/test_main/test_constants.cpp:3:
src/lorawan_settings.hpp:37:1: error: ‘String’ does not name a type
   37 | String settings_get_string(const char *key, const char *default_value = "");
      | ^~~~~~
In file included from .pio/libdeps/native/Unity/src/unity.h:21,
                 from test/test_main/test_constants.cpp:1:
test/test_main/test_constants.cpp: In function ‘void test_lorawan_constants()’:
test/test_main/test_constants.cpp:38:47: error: ‘MAX_PAYLOAD_SIZE’ was not declared in this scope
   38 |     TEST_ASSERT_EQUAL(config::MaxPayloadSize, MAX_PAYLOAD_SIZE);
      |                                               ^~~~~~~~~~~~~~~~
.pio/libdeps/native/Unity/src/unity_internals.h:883:156: note: in definition of macro ‘UNITY_TEST_ASSERT_EQUAL_INT’
  883 | #define UNITY_TEST_ASSERT_EQUAL_INT(expected, actual, line, message)                             UnityAssertEqualNumber((UNITY_INT)(expected), (UNITY_INT)(actual), (message), (UNITY_LINE_TYPE)(line), UNITY_DISPLAY_STYLE_INT)
      |                                                                                                                                                            ^~~~~~
test/test_main/test_constants.cpp:38:5: note: in expansion of macro ‘TEST_ASSERT_EQUAL’
   38 |     TEST_ASSERT_EQUAL(config::MaxPayloadSize, MAX_PAYLOAD_SIZE);
      |     ^~~~~~~~~~~~~~~~~
test/test_main/test_constants.cpp:39:46: error: ‘MAX_SENSOR_READ’ was not declared in this scope
   39 |     TEST_ASSERT_EQUAL(config::MaxSensorRead, MAX_SENSOR_READ);
      |                                              ^~~~~~~~~~~~~~~
.pio/libdeps/native/Unity/src/unity_internals.h:883:156: note: in definition of macro ‘UNITY_TEST_ASSERT_EQUAL_INT’
  883 | #define UNITY_TEST_ASSERT_EQUAL_INT(expected, actual, line, message)                             UnityAssertEqualNumber((UNITY_INT)(expected), (UNITY_INT)(actual), (message), (UNITY_LINE_TYPE)(line), UNITY_DISPLAY_STYLE_INT)
      |                                                                                                                                                            ^~~~~~
test/test_main/test_constants.cpp:39:5: note: in expansion of macro ‘TEST_ASSERT_EQUAL’
   39 |     TEST_ASSERT_EQUAL(config::MaxSensorRead, MAX_SENSOR_READ);
      |     ^~~~~~~~~~~~~~~~~
*** [.pio/build/native/test/test_main/test_constants.o] Error 1
Building stage has failed, see errors above. Use `pio test -vvv` option to enable verbose output.
----------------- native:test_main [ERRORED] Took 0.51 seconds -----------------

=================================== SUMMARY ===================================
Environment    Test                    Status    Duration
-------------  ----------------------  --------  ------------
native         test_lorawan            PASSED    00:00:00.409
native         test_lorawan_settings   PASSED    00:00:00.408
native         test_utils              PASSED    00:00:00.398
native         test_menu               ERRORED   00:00:00.399
native         test_memory_management  PASSED    00:00:00.401
native         test_main               ERRORED   00:00:00.509
================= 28 test cases: 26 succeeded in 00:00:02.523 =================
